# zspeedtest

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pr_codeql.yaml  pr_dependency_review.yaml  pr_tests.yaml  publish_coverage.yaml  release.yaml
docs/: CHANGELOG.md
src/zspeedtest/: __init__.py  main.py
tests/: test_main.py
