[build-system]
requires = ["uv_build>=0.11.23,<0.13.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[project]
name = "zspeedtest"
version = "0.1.1"
description = "zspeedtest"
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = "MIT"
authors = [{ name = "Sergey", email = "kava.develop@protonmail.com" }]
keywords = ["zspeedtest"]
classifiers = [
    "Typing :: Typed",
    "Framework :: Pytest",
    "Framework :: AsyncIO",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = []

[project.scripts]
zspeedtest = "zspeedtest.main:run"

[dependency-groups]
lint = [
    "mypy==2.1.0",
    "ruff==0.15.18",
    "bandit==1.9.4",
    "zizmor==1.25.2",
    "semgrep==1.167.0",
    "codespell==2.4.2",
    "ty==0.0.54",
    # mypy extensions
    "mypy-extensions==1.1.0",
    "types-setuptools",
]
test = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-timeout>=2.4.0",
    "pytest-cov>=6.2.1",
    "covdefaults>=2.3.0",
    "coverage[toml]==7.14.1",
]
docs = ["zensical==0.0.45"]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "docs" },
    "detect-secrets==1.5.0",
    "prek==0.4.5",
]

[project.urls]
Homepage = "https://theseriff.github.io/zspeedtest/"
Repository = "https://github.com/theseriff/zspeedtest"
Documentation = "https://theseriff.github.io/zspeedtest/"
Changelog = "https://github.com/theseriff/zspeedtest/blob/main/docs/CHANGELOG.md"
Issues = "https://github.com/theseriff/zspeedtest/issues"

# Tests
[tool.pytest.ini_options]
xfail_strict = true
timeout = 10
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = []
markers = []

[tool.coverage.run]
plugins = ["covdefaults"]
relative_files = true
parallel = true
branch = true
concurrency = ["thread", "multiprocessing"]
source = ["src", "tests"]
omit = ["**/__init__.py"]

[tool.coverage.paths]
source = ["src"]
tests = ["tests"]

[tool.coverage.report]
fail_under = 100
skip_empty = true
show_missing = true
exclude_also = [
    'if TYPE_CHECKING:',
    "if __name__ == .__main__.:",
    '@()?abstractmethod',
    "raise NotImplementedError",
    "pass",
    '\.\.\.',
]
omit = ["*/__init__.py", '*/types.py']

# Static Analysis
[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]
all = "error"
unresolved-attribute = "ignore"

[tool.ty.analysis]
respect-type-ignore-comments = false

[tool.ty.terminal]
error-on-warning = true
output-format = "concise"

[tool.mypy]
mypy_path = "src"
files = ["src", "tests"]
python_version = "3.10"
strict = true
pretty = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
allow_redefinition = true
allow_untyped_calls = true
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_decorators = false
show_error_codes = true
show_error_context = true
show_column_numbers = true
check_untyped_defs = true
namespace_packages = true
ignore_missing_imports = true

[tool.semgrep]
paths = ["src"]
include = ["src"]

[tool.bandit]
targets = "src"

# Liter
[tool.ruff]
src = ["src"]
include = ["src/**.py", "tests/**.py"]
target-version = "py310"
line-length = 79
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # Conflict: D203 ("one-blank-line-before-class-docstring") is incompatible with D211 (No blank line before class docstring). We follow D211.
    "D213",   # Conflict: D213 ("multi-line summary second line") conflicts with D212 (summary on the same line as triple quotes). We follow D212.
    "COM812", # Conflict: Danger! This rule ("trailing-comma-missing") conflicts with the automatic behavior of "ruff format", which manages trailing commas.
    "SLF001",
    "RUF001", # cyrillic
    "D",
    "S310",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D", "SLF001", "TID251", "PLR2004"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]
no-lines-before = ["local-folder"]

[tool.codespell]
skip = "*.pyi,*.pyc,./site"

# Python Semantic Release
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
build_command = """
    uv lock --upgrade-package zspeedtest
    git add uv.lock
    uv build
"""
tag_format = "v{version}"
major_on_zero = false
allow_zero_version = true
commit_message = "chore(release): release v{version} [skip ci]"

[tool.semantic_release.commit_parser_options]
major_tags = ["BREAKING CHANGE"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.changelog]
# Recommended patterns for conventional commits parser that is scope aware
exclude_commit_patterns = [
    '''Initial [Cc]ommit.*''',         # codespell:ignore ommit
    '''refactor(?:\([^)]*?\))?: .+''',
    '''polish(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''chore(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''test(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''Merged? .*''',
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "docs/CHANGELOG.md"
mask_initial_release = true

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[tool.semantic_release.remote]
type = "github"
ignore_token_for_push = true
